--- a/practica06/practica06.ipynb
+++ b/practica06/practica06.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Práctica VI\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/{user_name}/{repo_name}/blob/{branch_name}/path/to/notebook.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/javism/fi2022-2023/blob/main/practica06/practica06.ipynb)\n",
+    "\n",
+    "https://github.com/javism/fi2022-2023/blob/main/practica06/practica06.ipynb\n",
     "\n",
     "* Vectores y Matrices: almacenan este tipo de datos con contenido numérico (bool, int, float). Habitualmente no añadimos y quitamos elementos salvo con operaciones puntuales de contatenación. \n",
     "* Listas: tipo de datos para almacenar otros datos de cualquier tipo. Están diseñados como estructura dinámica en la que añadir y extraer elementos habitualmente. \n",
