--- a/practica06/practica06.ipynb
+++ b/practica06/practica06.ipynb
@@ -9,8 +9,6 @@
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/javism/fi2022-2023/blob/main/practica06/practica06.ipynb)\n",
     "\n",
-    "https://github.com/javism/fi2022-2023/blob/main/practica06/practica06.ipynb\n",
-    "\n",
     "* Vectores y Matrices: almacenan este tipo de datos con contenido numérico (bool, int, float). Habitualmente no añadimos y quitamos elementos salvo con operaciones puntuales de contatenación. \n",
     "* Listas: tipo de datos para almacenar otros datos de cualquier tipo. Están diseñados como estructura dinámica en la que añadir y extraer elementos habitualmente. \n",
     "\n",
@@ -26,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "id": "2511c84b",
    "metadata": {},
    "outputs": [
@@ -82,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "id": "e6af1cc7",
    "metadata": {},
    "outputs": [
@@ -125,17 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "id": "1028e323",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.93930778, 0.44551489, 0.2006587 , 0.47424093]])"
+       "array([[0.59139526, 0.19773657, 0.1629087 , 0.86775647]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,19 +145,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "id": "5aae81f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  3,  -1,   4,   4],\n",
-       "       [ -1,   5, -10,  -1],\n",
-       "       [  6,   3,   2,   5]])"
+       "array([[  6,   3,  -7,   9],\n",
+       "       [ -2,   9,  -1,   2],\n",
+       "       [ -7,   9, -10,  -2]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,19 +169,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "id": "eae4d03a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.52907791,  1.1109026 ,  4.84641016,  3.32508372],\n",
-       "       [ 1.776943  ,  6.14571975,  2.31328402,  2.36737481],\n",
-       "       [ 2.33745289,  6.7578469 , -0.50796628,  1.94084298]])"
+       "array([[ 2.07851931,  4.13154333,  0.03125711,  5.13203979],\n",
+       "       [ 3.54035778,  5.59426043,  4.24266025, -0.96119269],\n",
+       "       [ 4.29425355,  5.25114221,  5.8375844 , -0.41234678]])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "id": "4a14b4e1",
    "metadata": {},
    "outputs": [
@@ -219,9 +217,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  3  -1   4   4]\n",
-      " [ -1   5 -10  -1]\n",
-      " [  6   3   2   5]]\n"
+      "[[  6   3  -7   9]\n",
+      " [ -2   9  -1   2]\n",
+      " [ -7   9 -10  -2]]\n"
      ]
     }
    ],
@@ -231,17 +229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "id": "ec4ca83f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 3, -1,  4,  4])"
+       "array([ 6,  3, -7,  9])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,17 +250,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "id": "4c35090b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "6"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,17 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "id": "887c0a55",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 3, -1,  4,  4])"
+       "array([ 6,  3, -7,  9])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,17 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "id": "f196107f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 3, -1,  6])"
+       "array([ 6, -2, -7])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,17 +313,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "id": "35d49b5a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 4, -1,  5])"
+       "array([ 9,  2, -2])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,17 +334,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "id": "8f62427a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([6, 3, 2, 5])"
+       "array([ -7,   9, -10,  -2])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "id": "14423ea9",
    "metadata": {},
    "outputs": [
@@ -394,6 +392,176 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9bce9703",
+   "metadata": {},
+   "source": [
+    "## Recorrido de vectores y matrices\n",
+    "* Métodos de crear vectores/matrices: `np.array`, `np.zeros`...\n",
+    "* Forma matrices: `shape` devuelve un vector de dos elementos con el número de filas [0] y columnas [1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "5f11acdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5  1  3 15  4]\n",
+      "[ 5  1  3 15  4  3  4  2]\n",
+      "[ 5  1  3 15  4  5  1  3 15  4  3  4  2]\n",
+      "Forma: (13,)\n",
+      "Longitud vector 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = np.array([5, 1, 3, 15, 4])\n",
+    "v2 = np.array([5, 1, 3, 15, 4, 3, 4, 2])\n",
+    "print(v1)\n",
+    "print(v2)\n",
+    "\n",
+    "v3 = np.concatenate((v1,v2))\n",
+    "\n",
+    "print(v3)\n",
+    "# Dimensiones vector y su longitud\n",
+    "print(f'Forma: {v3.shape}')\n",
+    "print(f'Longitud vector {v3.shape[0]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcaabcbd",
+   "metadata": {},
+   "source": [
+    "Podemos recorrer los vectores/matrices con un iterador que extrae cada elemento o utilizando las coordenadas "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "09555ad4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1\n",
+      "3\n",
+      "15\n",
+      "4\n",
+      "5\n",
+      "1\n",
+      "3\n",
+      "15\n",
+      "4\n",
+      "v1[0]=5\n",
+      "v1[1]=1\n",
+      "v1[2]=3\n",
+      "v1[3]=15\n",
+      "v1[4]=4\n",
+      "5\n",
+      "1\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for x in v1: \n",
+    "    print(x)\n",
+    "    \n",
+    "for i in range(v1.shape[0]):\n",
+    "    print(v1[i])\n",
+    "\n",
+    "for i in range(v1.shape[0]):\n",
+    "    print(f'v1[{i}]={v1[i]}')\n",
+    "    \n",
+    "a = 15\n",
+    "for x in v1: \n",
+    "    if (x < a):\n",
+    "        print(x)\n",
+    "    else:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "576b1cda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduce v[0]:1\n",
+      "Introduce v[1]:2\n",
+      "Introduce v[2]:3\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = np.zeros(3)\n",
+    "for i in range(v.shape[0]):\n",
+    "    v[i] = \\\n",
+    "        float(input(f'Introduce v[{i}]:'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0c5a8d8",
+   "metadata": {},
+   "source": [
+    "Calcular el máximo y la media"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "a54bb06f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media nuestra: 5.6\n",
+      "Máximo nuestro: 15\n",
+      "Máximo: 15 \n",
+      "Mínimo: 1 \n",
+      "Media: 5.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = v1\n",
+    "media = 0\n",
+    "for x in v: \n",
+    "    media = media + x\n",
+    "    \n",
+    "media = media/v.shape[0]\n",
+    "print(f'Media nuestra: {media}')\n",
+    "\n",
+    "ma = v[0]\n",
+    "# ma = float('-Inf')\n",
+    "for x in v: \n",
+    "    if x > ma:\n",
+    "        ma = x\n",
+    "        \n",
+    "print(f'Máximo nuestro: {ma}')\n",
+    "\n",
+    "# También con el API de numpy:\n",
+    "print(f'Máximo: {v.max()} \\nMínimo: {v.min()} \\nMedia: {v.mean()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dee4cdaf",
    "metadata": {},
    "source": [
@@ -407,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "d3891467",
    "metadata": {},
    "outputs": [
@@ -446,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "id": "b0658625",
    "metadata": {},
    "outputs": [
@@ -456,7 +624,7 @@
        "[True, 'hola']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
