Añadida álgebra lineal con sistemas de ecuaciones y cadenas

--- a/practica06/practica06.ipynb
+++ b/practica06/practica06.ipynb
@@ -11,8 +11,10 @@
     "\n",
     "* Vectores y Matrices: almacenan este tipo de datos con contenido numérico (bool, int, float). Habitualmente no añadimos y quitamos elementos salvo con operaciones puntuales de contatenación. \n",
     "* Listas: tipo de datos para almacenar otros datos de cualquier tipo. Están diseñados como estructura dinámica en la que añadir y extraer elementos habitualmente. \n",
+    "* En esta práctica no vamos a usar la mayoría de operadores de matrices de numpy ya que vamos a desarrollar nuestro conocimiento de bucles y matrices implementando nosotros mismos las funciones.\n",
     "\n",
     "Recursos: \n",
+    "* [Álgebra Lineal con Python](https://relopezbriega.github.io/blog/2015/06/14/algebra-lineal-con-python/): básicamente todo lo que se necesita para esta asignatura con repaso de conceptos matemáticos. \n",
     "* [Cómo resolver sistemas de ecuaciones lineales con numpy](https://joanby.github.io/bookdown-algebra/ecuaciones-y-sistemas-lineales-con-r-python-y-octave.html#trabajando-con-python)\n",
     "\n",
     "## Vectores y Matrices\n",
@@ -24,28 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "2511c84b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 3]\n",
-      "(3,)\n",
-      "[[1 2 3]]\n",
-      "(1, 3)\n",
-      "[[1 2 3]\n",
-      " [4 5 6]]\n",
-      "(2, 3)\n",
-      "[[1]\n",
-      " [2]\n",
-      " [3]]\n",
-      "(3, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -80,24 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "e6af1cc7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0. 0. 0.]\n",
-      "[[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]]\n",
-      "[[1. 1.]\n",
-      " [1. 1.]\n",
-      " [1. 1.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "M = np.zeros(3)\n",
     "print(M)\n",
@@ -123,21 +93,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "1028e323",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.59139526, 0.19773657, 0.1629087 , 0.86775647]])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "M = np.random.random([1,4])\n",
     "M"
@@ -145,23 +104,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "5aae81f4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  6,   3,  -7,   9],\n",
-       "       [ -2,   9,  -1,   2],\n",
-       "       [ -7,   9, -10,  -2]])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "M = np.random.randint(-10,10,(3,4))\n",
     "M"
@@ -169,23 +115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "eae4d03a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 2.07851931,  4.13154333,  0.03125711,  5.13203979],\n",
-       "       [ 3.54035778,  5.59426043,  4.24266025, -0.96119269],\n",
-       "       [ 4.29425355,  5.25114221,  5.8375844 , -0.41234678]])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Números aleatorios con la distribución normal con media 3 y varianza 2\n",
     "Mn = np.random.normal(3, 2, (3,4))\n",
@@ -209,146 +142,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "4a14b4e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  6   3  -7   9]\n",
-      " [ -2   9  -1   2]\n",
-      " [ -7   9 -10  -2]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(M)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "ec4ca83f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 6,  3, -7,  9])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "M[0,]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "4c35090b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "M[0,0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "887c0a55",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 6,  3, -7,  9])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "M[0,:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "f196107f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 6, -2, -7])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "M[:,0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "35d49b5a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 9,  2, -2])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "M[:,-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "8f62427a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ -7,   9, -10,  -2])"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vector = M[2,:]\n",
     "vector"
@@ -361,23 +218,15 @@
    "source": [
     "### Contatenar matrices\n",
     "\n",
-    "Se pueden concatenar matrices siempre que las dimensiones de las matrices cumplan las condiciones de álgebra lineal"
+    "Se pueden concatenar matrices siempre que las dimensiones de las matrices cumplan las condiciones de álgebra lineal.  Otras funciones relacionadas son vstack, hstack."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "14423ea9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1  2  3  3 -4  5  6]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "M1 = np.array([1,2,3])\n",
     "M2 = np.array([3, -4, 5, 6])\n",
@@ -395,29 +244,17 @@
    "id": "9bce9703",
    "metadata": {},
    "source": [
-    "## Recorrido de vectores y matrices\n",
+    "### Recorrido de vectores y matrices\n",
     "* Métodos de crear vectores/matrices: `np.array`, `np.zeros`...\n",
     "* Forma matrices: `shape` devuelve un vector de dos elementos con el número de filas [0] y columnas [1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "5f11acdc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 5  1  3 15  4]\n",
-      "[ 5  1  3 15  4  3  4  2]\n",
-      "[ 5  1  3 15  4  5  1  3 15  4  3  4  2]\n",
-      "Forma: (13,)\n",
-      "Longitud vector 13\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v1 = np.array([5, 1, 3, 15, 4])\n",
     "v2 = np.array([5, 1, 3, 15, 4, 3, 4, 2])\n",
@@ -442,35 +279,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "09555ad4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "1\n",
-      "3\n",
-      "15\n",
-      "4\n",
-      "5\n",
-      "1\n",
-      "3\n",
-      "15\n",
-      "4\n",
-      "v1[0]=5\n",
-      "v1[1]=1\n",
-      "v1[2]=3\n",
-      "v1[3]=15\n",
-      "v1[4]=4\n",
-      "5\n",
-      "1\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "for x in v1: \n",
@@ -492,20 +304,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "576b1cda",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Introduce v[0]:1\n",
-      "Introduce v[1]:2\n",
-      "Introduce v[2]:3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v = np.zeros(3)\n",
     "for i in range(v.shape[0]):\n",
@@ -523,22 +325,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "a54bb06f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Media nuestra: 5.6\n",
-      "Máximo nuestro: 15\n",
-      "Máximo: 15 \n",
-      "Mínimo: 1 \n",
-      "Media: 5.6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v = v1\n",
     "media = 0\n",
@@ -562,6 +352,193 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e033391b",
+   "metadata": {},
+   "source": [
+    "#### Operaciones con matrices\n",
+    "\n",
+    "Inicializamos una matriz con valores aleatorios y hacemos la suma de las filas y la suma de las columnas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a338350",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nf = 3\n",
+    "nc = 3\n",
+    "M = np.zeros((nf,nc))\n",
+    "for i in range(nf):\n",
+    "    for j in range(nc):\n",
+    "        M[i,j] = np.random.randint(1,10)\n",
+    "\n",
+    "print(M)\n",
+    "sumaf = np.zeros(3)\n",
+    "for i in range(nf):\n",
+    "    for j in range(nc):\n",
+    "        sumaf[i] = sumaf[i] + M[i,j]\n",
+    "\n",
+    "print(sumaf)\n",
+    "        \n",
+    "# Clave: situamos primero el bucle que recorre\n",
+    "# las columnas y luego iteramos por la fila de \n",
+    "# cada columna\n",
+    "sumac = np.zeros(3) \n",
+    "for j in range(nc):\n",
+    "    for i in range(nf):\n",
+    "        sumac[j] = sumac[j] + M[i,j] \n",
+    "\n",
+    "print(sumac)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc58a9cf",
+   "metadata": {},
+   "source": [
+    "Realizamos el producto elemento a elemento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb902768",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nf = 3\n",
+    "nc = 5\n",
+    "M1 = np.zeros((nf,nc))\n",
+    "M2 = np.zeros((nf,nc))\n",
+    "MP = np.zeros((nf,nc))\n",
+    "for i in range(nf):\n",
+    "    for j in range(nc):\n",
+    "        M1[i,j] = np.random.randint(1,10)\n",
+    "        M2[i,j] = np.random.randint(1,10)\n",
+    "\n",
+    "print(M1)\n",
+    "print(M2)\n",
+    "\n",
+    "for i in range(nf):\n",
+    "    for j in range(nc):\n",
+    "        MP[i,j] = M1[i,j]*M2[i,j]\n",
+    "\n",
+    "print(MP)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8635365",
+   "metadata": {},
+   "source": [
+    "### Sistemas de ecuaciones lineales\n",
+    "\n",
+    "Ejemplo de sistema de ecuaciones:\n",
+    "\n",
+    "$$\n",
+    "\\begin{alignat}{4}\n",
+    "  x_1& +x_2 & + 2x_3 &=  9&\\\\\n",
+    "  2x_1& +4x_2 & - 3x_3 &=  1&\\\\\n",
+    "  3x_1& +6x_2 & - 5x_3 &=  0&\\\\\n",
+    "\\end{alignat}  \n",
+    "$$\n",
+    "\n",
+    "y su expresión matricial:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1de7d305",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[1,1,2],[2,4,-3],[3,6,-5]])\n",
+    "b = np.array([9,1,0])\n",
+    "\n",
+    "print(np.linalg.det(A))\n",
+    "print(np.linalg.matrix_rank(A))\n",
+    "x = np.linalg.solve(A, b)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2651bb3a",
+   "metadata": {},
+   "source": [
+    "nuestra única solución es $$x=(1,2,3)$$\n",
+    "\n",
+    "Matriz inversa y determinante:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84a4fbdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ainv = np.linalg.inv(A)\n",
+    "print(Ainv)\n",
+    "Adet = np.linalg.det(A)\n",
+    "print(Adet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e247939a",
+   "metadata": {},
+   "source": [
+    "## Cadenas\n",
+    "\n",
+    "Es un tipo de dato inmutable, esto es, no se puede modificar así que para cualquier cambio tendremos que crear una cadena nueva con los cambios. \n",
+    "\n",
+    "No podremos hacer cosas del tipo: \n",
+    "\n",
+    "```python\n",
+    "cadena = 'hola'\n",
+    "cadena[0] = 'H'\n",
+    "```\n",
+    "\n",
+    "que están permitidas en otros lenguajes de programación"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "536b66a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = '  Hola mundo  '\n",
+    "b = '  Cómo estás? '\n",
+    "\n",
+    "# Concatenar\n",
+    "print(a+b)\n",
+    "# Extraer una parte de la cadena\n",
+    "print(a[2:7])\n",
+    "# Tamaño\n",
+    "print(len(a))\n",
+    "# Eliminar espacios al inicio y final de la cadena\n",
+    "print(a.strip()+b.strip())\n",
+    "# Mayúsculas y minúsculas\n",
+    "print(a.lower()+b.upper())\n",
+    "# Reemplazar todas las ocurrencias\n",
+    "print(a.replace('o','0'))\n",
+    "# Partir la cadena en subcadenas separadas por un carácter. Por defecto espacio en blanco. \n",
+    "print(a.split())\n",
+    "print(a.split('o'))\n",
+    "print('hola'.upper() in a.upper())\n",
+    "print(b in a)\n",
+    "\n",
+    "#Ejemplos y otras funciones en https://www.w3schools.com/python/python_strings.asp\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dee4cdaf",
    "metadata": {},
    "source": [
@@ -575,24 +552,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "d3891467",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5, True, 'hola']\n",
-      "<class 'int'>\n",
-      "<class 'bool'>\n",
-      "<class 'str'>\n",
-      "hola\n",
-      "True\n",
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Declaración de lista vacía\n",
     "lista = list()\n",
@@ -614,21 +577,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "b0658625",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[True, 'hola']"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lista[2:]"
    ]
@@ -637,6 +589,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "587bb2b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = [1,2, True, 'hola']\n",
+    "print(lista)\n",
+    "lista.reverse()\n",
+    "print(lista)\n",
+    "# Esto daría un error al haber tipos diferentes\n",
+    "# lista.sort()\n",
+    "lista = [3, 4, -8, 0]\n",
+    "lista.sort()\n",
+    "print(lista)\n",
+    "\n",
+    "# Insertar en una posición\n",
+    "lista.insert(2,34)\n",
+    "print(lista)\n",
+    "# Obtener la posición de la primera aparición de un elemento\n",
+    "lista.index(-8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84cbaf31",
    "metadata": {},
    "outputs": [],
    "source": []
