--- a/practica06/practica06.ipynb
+++ b/practica06/practica06.ipynb
@@ -9,13 +9,15 @@
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/javism/fi2022-2023/blob/main/practica06/practica06.ipynb)\n",
     "\n",
-    "* Vectores y Matrices: almacenan este tipo de datos con contenido numérico (bool, int, float). Habitualmente no añadimos y quitamos elementos salvo con operaciones puntuales de contatenación. \n",
-    "* Listas: tipo de datos para almacenar otros datos de cualquier tipo. Están diseñados como estructura dinámica en la que añadir y extraer elementos habitualmente. \n",
-    "* En esta práctica no vamos a usar la mayoría de operadores de matrices de numpy ya que vamos a desarrollar nuestro conocimiento de bucles y matrices implementando nosotros mismos las funciones.\n",
+    "* **Vectores y Matrices**: almacenan este tipo de datos con contenido numérico (bool, int, float). Habitualmente no añadimos y quitamos elementos salvo con operaciones puntuales de contatenación. \n",
+    "* **Listas**: tipo de datos para almacenar otros datos de cualquier tipo. Están diseñados como estructura dinámica en la que añadir y extraer elementos habitualmente. \n",
+    "* En esta práctica no vamos a usar la mayoría de operadores de matrices básicos de numpy ya que vamos a desarrollar nuestro conocimiento de bucles y matrices implementando nosotros mismos las funciones.\n",
     "\n",
     "Recursos: \n",
     "* [Álgebra Lineal con Python](https://relopezbriega.github.io/blog/2015/06/14/algebra-lineal-con-python/): básicamente todo lo que se necesita para esta asignatura con repaso de conceptos matemáticos. \n",
     "* [Cómo resolver sistemas de ecuaciones lineales con numpy](https://joanby.github.io/bookdown-algebra/ecuaciones-y-sistemas-lineales-con-r-python-y-octave.html#trabajando-con-python)\n",
+    "* [Documentación oficial sobre listas en Python](https://docs.python.org/es/3/tutorial/datastructures.html)\n",
+    "* [Resumen de operaciones con cadenas](https://www.w3schools.com/python/python_strings.asp) (en este caso la documentación oficial es demasiado extensa para empezar)\n",
     "\n",
     "## Vectores y Matrices\n",
     "\n",
@@ -44,7 +46,9 @@
     "print(M.shape)\n",
     "\n",
     "# Matriz\n",
-    "M = np.array([[1,2,3],[4,5,6]])\n",
+    "M = np.array([[1,2,3],\n",
+    "              [4,5,6],\n",
+    "              [5,5,5]])\n",
     "print(M)\n",
     "print(M.shape)\n",
     "\n",
@@ -71,7 +75,7 @@
    "source": [
     "M = np.zeros(3)\n",
     "print(M)\n",
-    "M = np.zeros([3,3])\n",
+    "M = np.zeros([3,4])\n",
     "print(M)\n",
     "\n",
     "# Observa las diferencias\n",
@@ -303,16 +307,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eee03309",
+   "metadata": {},
+   "source": [
+    "Crea una función que lea un entero N y un vector de N reales desde teclado e implemente el cálculo del máximo, mínimo y media"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "576b1cda",
+   "id": "5abee4d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "v = np.zeros(3)\n",
+    "# Lee de teclado y transforma en entero\n",
+    "n = int(input('Introduce el número de elemento del vector N: '))\n",
+    "v = np.zeros(n)\n",
+    "\n",
+    "print(v)\n",
+    "print(v.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe5cf0ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for i in range(v.shape[0]):\n",
-    "    v[i] = \\\n",
-    "        float(input(f'Introduce v[{i}]:'))"
+    "    v[i] = float(input(f'Introduce v[{i}]:'))\n",
+    "    \n",
+    "print(v)"
    ]
   },
   {
@@ -330,24 +357,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v = v1\n",
-    "media = 0\n",
-    "for x in v: \n",
-    "    media = media + x\n",
-    "    \n",
-    "media = media/v.shape[0]\n",
-    "print(f'Media nuestra: {media}')\n",
-    "\n",
-    "ma = v[0]\n",
-    "# ma = float('-Inf')\n",
-    "for x in v: \n",
-    "    if x > ma:\n",
-    "        ma = x\n",
+    "maxi = v[0]\n",
+    "for i in range(v.shape[0]):\n",
+    "    if v[i] > maxi: \n",
+    "        maxi = v[i]\n",
     "        \n",
-    "print(f'Máximo nuestro: {ma}')\n",
+    "print(f'El máximo es {maxi}')\n",
     "\n",
-    "# También con el API de numpy:\n",
-    "print(f'Máximo: {v.max()} \\nMínimo: {v.min()} \\nMedia: {v.mean()}')"
+    "mini = v[0]\n",
+    "for i in range(v.shape[0]):\n",
+    "    if v[i] < mini: \n",
+    "        mini = v[i]\n",
+    "\n",
+    "print(f'El mínimo es {mini}')\n",
+    "\n",
+    "media = 0\n",
+    "for i in range(v.shape[0]):\n",
+    "    media = media + v[i]\n",
+    "    \n",
+    "media = media / v.shape[0]\n",
+    "print(f'La media es {media}')"
    ]
   },
   {
@@ -535,6 +564,101 @@
     "print(b in a)\n",
     "\n",
     "#Ejemplos y otras funciones en https://www.w3schools.com/python/python_strings.asp\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "124f10f0",
+   "metadata": {},
+   "source": [
+    "#### Recorrido de cadenas con iteradores\n",
+    "\n",
+    "De esta forma recorremos extrayendo carácter a carácter. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3b4bcae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cadena = 'Hola, ¿qué tal estamos?'\n",
+    "\n",
+    "# imprimir sin añadir líneas nuevas\n",
+    "for c in cadena:\n",
+    "    print(c, end='')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cbd0e26",
+   "metadata": {},
+   "source": [
+    "El siguiente código para contar vocales y consonantes está incompleto:\n",
+    "1. Añade cómo contar las vocales\n",
+    "2. Añade una comprobación para contar sólo letras. Pista: usa la función isalpha() sobre el carácter. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bad7ba02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Contar las vocales y consonantes\n",
+    "sumav = 0\n",
+    "sumac = 0\n",
+    "for c in cadena:\n",
+    "    if c == 'a' or c == 'e' \\\n",
+    "        or c == 'i' or c == 'o' or c == 'u':\n",
+    "        sumav = sumav + 1\n",
+    "    else: \n",
+    "        pass # ???\n",
+    "\n",
+    "print(cadena)\n",
+    "print(f'Hay {sumav} vocales')\n",
+    "print(f'Hay {sumac} consonantes')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c32fb25",
+   "metadata": {},
+   "source": [
+    "#### Recorrido de cadenas con índices\n",
+    "\n",
+    "Vamos a recorrer la cadena entera, hasta la mitad, y al revés. Ten en cuenta que el último elemento de la cadena es n-1. Prueba con distintas cadenas. Con estas herramientas será más fácil hacer el ejercicio del palíndromo. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11b4d06f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cad = 'reconocer'\n",
+    "#cad = 'holaque'\n",
+    "\n",
+    "print('Imprimir con índices:')\n",
+    "n = len(cad)\n",
+    "for i in range(n):\n",
+    "    print(cad[i], end='')\n",
+    "print('\\n')\n",
+    "\n",
+    "print('Sólo la mitad:')\n",
+    "for i in range(int(n/2)):\n",
+    "    print(cad[i], end='')\n",
+    "print('\\n')\n",
+    "\n",
+    "print('Al revés:')\n",
+    "n = len(cad)\n",
+    "for i in range(n):\n",
+    "    print(cad[n-1-i], end='')\n",
+    "print('\\n')\n"
    ]
   },
   {
