arreglado ejemplo de brillo

--- a/practica07/practica07_matplotlib.ipynb
+++ b/practica07/practica07_matplotlib.ipynb
@@ -645,17 +645,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "674ef5bb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f27b4c3ecd0>"
+       "<matplotlib.image.AxesImage at 0x7f27afef1b50>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -673,14 +673,14 @@
    "source": [
     "copia_img = img.copy()\n",
     "copia_img = copia_img*1.5\n",
-    "copia_img[copia_img>255] = 255\n",
-    "plt.imshow(copia_img + 20, cmap=\"gray\")"
+    "copia_img[copia_img>255] = 255 # Filtro paso alta para los valores que pasen de máximo de blanco\n",
+    "plt.imshow(copia_img, cmap=\"gray\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16d379c0",
+   "id": "ddf709db",
    "metadata": {},
    "outputs": [],
    "source": []
