añadida nota sobre funciones sobre vectores

--- a/practica07/practica07_matplotlib.ipynb
+++ b/practica07/practica07_matplotlib.ipynb
@@ -487,11 +487,13 @@
    "id": "61ef3d7e",
    "metadata": {},
    "source": [
-    "## Miscelánea: zoom, resolución\n",
+    "## Miscelánea: zoom, resolución, funciones sobre vectores...\n",
+    "\n",
+    "Algunas funciones de numpy tienen nombre similar a las de la base de python o su módulo `math`, por ejemplo `sqrt()`. Asegúrate de usar siempre las de numpy cuando trabajes con vectores o matrices o tendrás un error de tipo. \n",
     "\n",
     "Hay muchos parámetros para personalizar la gráfica (cambiar etiquetas en los ejes, escala logarítmica, rango de datos visualizados...). \n",
     "\n",
-    "Por defecto matplotlib ajusta al rango de la x e y para visualizar la gráfica entera. A veces nos interesa cambiar esto, suele ser útil `xlim` e `ylim` para ajustar el zoom."
+    "Por defecto matplotlib ajusta al rango de la x e y para visualizar la gráfica entera. A veces nos interesa cambiar esto, suele ser útil `xlim` e `ylim` para ajustar el zoom.\n"
    ]
   },
   {
